--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,9 +1,10 @@
 {
-  "include": ["lib/**.js", "test/**.jsx", "index.js"],
+  "include": ["lib/**/*.js", "test/**/*.jsx", "test/**/*.js", "index.js"],
   "exclude": ["**/*.min.js"],
   "compilerOptions": {
-    "target": "ES2015",
-    "lib": ["ES2015", "DOM"],
+    "target": "ES2020",
+    "lib": ["ES2020", "DOM"],
+    "module": "ES2020",
     "moduleResolution": "node",
     "jsx": "react",
     "allowJs": true,
@@ -11,7 +12,6 @@
     "declaration": true,
     "emitDeclarationOnly": true,
     "allowSyntheticDefaultImports": true,
-    "resolveJsonModule": true,
     "skipLibCheck": true,
     "noImplicitAny": false,
     "noImplicitThis": true,
