fix: react-is version
Allow react-is dependency version to match react and react-dom version

--- a/package.json
+++ b/package.json
@@ -84,7 +84,7 @@
     "comma-separated-tokens": "^2.0.0",
     "prop-types": "^15.0.0",
     "property-information": "^6.0.0",
-    "react-is": "^17.0.0",
+    "react-is": ">=16",
     "remark-parse": "^10.0.0",
     "remark-rehype": "^9.0.0",
     "space-separated-tokens": "^2.0.0",
