--- a/package.json
+++ b/package.json
@@ -98,6 +98,11 @@
     "@types/react": ">=16",
     "react": ">=16"
   },
+  "peerDependenciesMeta": {
+    "@types/react": {
+      "optional": true
+    }
+  },
   "devDependencies": {
     "@types/react": "^17.0.0",
     "@types/react-dom": "^17.0.0",
