--- a/package.json
+++ b/package.json
@@ -119,9 +119,9 @@
     "remark-toc": "^8.0.0",
     "rimraf": "^3.0.0",
     "type-coverage": "^2.0.0",
-    "typescript": "^4.0.0",
+    "typescript": "~4.4.0",
     "uvu": "^0.5.0",
-    "xo": "^0.45.0"
+    "xo": "^0.46.0"
   },
   "scripts": {
     "prepack": "npm run build && npm run format",
