--- a/package.json
+++ b/package.json
@@ -80,6 +80,7 @@
   ],
   "dependencies": {
     "@types/hast": "^2.0.0",
+    "@types/prop-types": "^15.0.0",
     "@types/unist": "^2.0.0",
     "comma-separated-tokens": "^2.0.0",
     "hast-util-whitespace": "^2.0.0",
