--- a/package.json
+++ b/package.json
@@ -103,6 +103,7 @@
     "@types/react": "^17.0.0",
     "@types/react-dom": "^17.0.0",
     "@types/react-is": "^17.0.0",
+    "@types/react-test-renderer": "^17.0.0",
     "c8": "^7.0.0",
     "esbuild": "^0.14.0",
     "eslint-config-xo-react": "^0.27.0",
@@ -113,6 +114,7 @@
     "prettier": "^2.0.0",
     "react": "^18.0.0",
     "react-dom": "^18.0.0",
+    "react-test-renderer": "^18.0.0",
     "rehype-raw": "^6.0.0",
     "remark-cli": "^10.0.0",
     "remark-gfm": "^3.0.0",
