Make minified source available to all tools
Support other tools which cannot work with ES Modules (e.g. Jest)

--- a/package.json
+++ b/package.json
@@ -72,6 +72,10 @@
   "main": "index.js",
   "types": "index.d.ts",
   "unpkg": "react-markdown.min.js",
+  "exports": {
+    "require": "./react-markdown.min.js",
+    "default": "./index.js"
+  },
   "files": [
     "lib/",
     "index.d.ts",
