--- a/package.json
+++ b/package.json
@@ -104,7 +104,7 @@
     "@types/react-dom": "^18.0.0",
     "@types/react-is": "^17.0.0",
     "c8": "^7.0.0",
-    "esbuild": "^0.14.0",
+    "esbuild": "^0.15.0",
     "eslint-config-xo-react": "^0.27.0",
     "eslint-plugin-es": "^4.0.0",
     "eslint-plugin-react": "^7.0.0",
@@ -114,15 +114,15 @@
     "react": "^18.0.0",
     "react-dom": "^18.0.0",
     "rehype-raw": "^6.0.0",
-    "remark-cli": "^10.0.0",
+    "remark-cli": "^11.0.0",
     "remark-gfm": "^3.0.0",
     "remark-preset-wooorm": "^9.0.0",
     "remark-toc": "^8.0.0",
     "rimraf": "^3.0.0",
     "type-coverage": "^2.0.0",
-    "typescript": "~4.4.0",
+    "typescript": "^4.0.0",
     "uvu": "^0.5.0",
-    "xo": "^0.48.0"
+    "xo": "^0.52.0"
   },
   "scripts": {
     "prepack": "npm run build && npm run format",
@@ -195,7 +195,7 @@
           "test/**/*.jsx"
         ],
         "rules": {
-          "node/file-extension-in-import": "off",
+          "n/file-extension-in-import": "off",
           "react/no-children-prop": "off",
           "react/prop-types": "off"
         }
