--- a/package.json
+++ b/package.json
@@ -105,13 +105,13 @@
     "@types/react-dom": "^18.0.0",
     "@types/react-is": "^18.0.0",
     "c8": "^8.0.0",
-    "esbuild": "^0.18.0",
+    "esbuild": "^0.19.0",
     "eslint-config-xo-react": "^0.27.0",
     "eslint-plugin-es": "^4.0.0",
     "eslint-plugin-react": "^7.0.0",
     "eslint-plugin-react-hooks": "^4.0.0",
     "eslint-plugin-security": "^1.0.0",
-    "prettier": "^2.0.0",
+    "prettier": "^3.0.0",
     "react": "^18.0.0",
     "react-dom": "^18.0.0",
     "rehype-raw": "^6.0.0",
@@ -121,12 +121,12 @@
     "remark-toc": "^8.0.0",
     "type-coverage": "^2.0.0",
     "typescript": "^5.0.0",
-    "xo": "^0.54.0"
+    "xo": "^0.56.0"
   },
   "scripts": {
     "prepack": "npm run build && npm run format",
     "build": "tsc --build --clean && tsc --build && type-coverage && esbuild index.js --bundle --minify --target=es2015 --outfile=react-markdown.min.js --global-name=ReactMarkdown --banner:js=\"(function (g, f) {typeof exports === 'object' && typeof module !== 'undefined' ? module.exports = f() : typeof define === 'function' && define.amd ? define([], f) : (g = typeof globalThis !== 'undefined' ? globalThis : g || self, g.ReactMarkdown = f()); }(this, (function () { 'use strict';\" --footer:js=\"return ReactMarkdown;})));\"",
-    "format": "remark . -qfo --ignore-pattern test/ && prettier . -w --loglevel warn && xo --fix",
+    "format": "remark . -qfo --ignore-pattern test/ && prettier . -w --log-level warn && xo --fix",
     "test-api": "node --no-warnings --experimental-loader=./test/loader.js --conditions development test/test.jsx",
     "test-coverage": "c8 --check-coverage --100 --reporter lcov npm run test-api",
     "test": "npm run build && npm run format && npm run test-coverage"
@@ -175,6 +175,9 @@
     "envs": [
       "shared-node-browser"
     ],
+    "rules": {
+      "unicorn/prefer-string-replace-all": "off"
+    },
     "overrides": [
       {
         "files": [
