Remove support for passing custom props to components
Previously, this project automatically passed different extra props to
particular components.
Those props are sometimes useful to some people, but not always useful
to everyone.

When overwriting components, these props are no longer passed:

*   `inline` on `code`:
    — create a plugin or use `pre` for the block
*   `level` on `h1`, `h2`, `h3`, `h4`, `h5`, `h6`
    — check `node.tagName` instead
*   `checked` on `li`
    — check `task-list-item` class or check `props.children`
*   `index` on `li`
    — create a plugin
*   `ordered` on `li`
    — create a plugin or check the parent
*   `depth` on `ol`, `ul`
    — create a plugin
*   `ordered` on `ol`, `ul`
    — check `node.tagName` instead
*   `isHeader` on `td`, `th`
    — check `node.tagName` instead
*   `isHeader` on `tr`
    — create a plugin or check children

When using options, these props are no longer passed:

*   `includeElementIndex`: `index` (create a plugin)
*   `rawSourcePos`: `sourcePosition` (use `node.position`)
*   `sourcePos`: `data-sourcepos` (create a plugin)

--- a/package.json
+++ b/package.json
@@ -81,18 +81,12 @@
   "dependencies": {
     "@types/hast": "^3.0.0",
     "@types/prop-types": "^15.0.0",
-    "@types/unist": "^3.0.0",
-    "comma-separated-tokens": "^2.0.0",
-    "hast-util-whitespace": "^3.0.0",
+    "hast-util-to-jsx-runtime": "^2.0.0",
     "mdast-util-to-hast": "^13.0.0",
     "prop-types": "^15.0.0",
-    "property-information": "^6.0.0",
     "remark-parse": "^11.0.0",
     "remark-rehype": "^11.0.0",
-    "space-separated-tokens": "^2.0.0",
-    "style-to-object": "^0.4.0",
     "unified": "^11.0.0",
-    "unist-util-stringify-position": "^4.0.0",
     "unist-util-visit": "^5.0.0",
     "vfile": "^6.0.0"
   },
@@ -161,9 +155,9 @@
     "atLeast": 100,
     "detail": true,
     "ignoreCatch": true,
-    "#": "below is ignored because some proptypes will `any`",
+    "#": "below is ignored because some proptypes will `any`; to do: remove prop-types?",
     "ignoreFiles": [
-      "lib/react-markdown.d.ts"
+      "lib/index.d.ts"
     ],
     "strict": true
   },
@@ -191,13 +185,13 @@
           "test/**/*.jsx"
         ],
         "rules": {
-          "n/file-extension-in-import": "off",
           "no-unused-vars": "off"
         }
       }
     ],
     "prettier": true,
     "rules": {
+      "n/file-extension-in-import": "off",
       "unicorn/prefer-string-replace-all": "off"
     }
   }
