--- a/package.json
+++ b/package.json
@@ -71,12 +71,10 @@
   "type": "module",
   "main": "index.js",
   "types": "index.d.ts",
-  "unpkg": "react-markdown.min.js",
   "files": [
     "lib/",
     "index.d.ts",
-    "index.js",
-    "react-markdown.min.js"
+    "index.js"
   ],
   "dependencies": {
     "@types/hast": "^3.0.0",
@@ -118,7 +116,7 @@
     "xo": "^0.56.0"
   },
   "scripts": {
-    "build": "tsc --build --clean && tsc --build && type-coverage && esbuild index.js --bundle --minify --target=es2015 --outfile=react-markdown.min.js --global-name=Markdown --banner:js=\"(function (g, f) {typeof exports === 'object' && typeof module !== 'undefined' ? module.exports = f() : typeof define === 'function' && define.amd ? define([], f) : (g = typeof globalThis !== 'undefined' ? globalThis : g || self, g.Markdown = f()); }(this, (function () { 'use strict';\" --footer:js=\"return Markdown;})));\"",
+    "build": "tsc --build --clean && tsc --build && type-coverage",
     "format": "remark . --frail --output --quiet && prettier . --log-level warn --write && xo --fix",
     "prepack": "npm run build && npm run format",
     "test": "npm run build && npm run format && npm run test-coverage",
