--- a/package.json
+++ b/package.json
@@ -8,26 +8,26 @@
   "contributors": [],
   "type": "module",
   "devDependencies": {
-    "@wooorm/starry-night": "^2.0.0",
+    "@wooorm/starry-night": "^3.0.0",
     "cssnano": "^6.0.0",
     "esbuild": "^0.19.0",
     "eslint-config-xo-react": "^0.27.0",
     "eslint-plugin-react": "^7.0.0",
     "eslint-plugin-react-hooks": "^4.0.0",
-    "hast-util-to-jsx-runtime": "^1.0.0",
+    "hast-util-to-jsx-runtime": "^2.0.0",
     "postcss-cli": "^10.0.0",
     "prettier": "^3.0.0",
     "react": "^18.0.0",
     "react-dom": "^18.0.0",
-    "react-markdown": "*",
-    "rehype-cli": "^11.0.0",
-    "rehype-highlight": "^6.0.0",
-    "rehype-preset-minify": "^6.0.0",
-    "rehype-prevent-favicon-request": "^3.0.0",
-    "rehype-raw": "^6.0.0",
-    "remark-gfm": "^3.0.0",
+    "react-markdown": "^9.0.0",
+    "rehype-cli": "^12.0.0",
+    "rehype-highlight": "^7.0.0",
+    "rehype-preset-minify": "^7.0.0",
+    "rehype-prevent-favicon-request": "^4.0.0",
+    "rehype-raw": "^7.0.0",
+    "remark-gfm": "^4.0.0",
     "remark-slug": "^7.0.0",
-    "remark-toc": "^8.0.0",
+    "remark-toc": "^9.0.0",
     "stylelint": "^15.0.0",
     "stylelint-config-standard": "^34.0.0",
     "xo": "^0.56.0"
