--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,29 +1,23 @@
-name: main
-on:
-  push:
-    branches:
-      - website
-  schedule:
-    - cron: '45 7 2 * *'
 jobs:
   main:
     runs-on: ubuntu-latest
     steps:
-      - uses: actions/checkout@v2
-        with:
-          persist-credentials: false
-      - uses: dcodeIO/setup-node-nvm@master
+      - uses: actions/checkout@v3
+      - uses: actions/setup-node@v3
         with:
           node-version: node
       - run: npm install
       - run: npm test
-      - name: Deploy
-        uses: JamesIves/github-pages-deploy-action@3.7.1
+      - uses: JamesIves/github-pages-deploy-action@releases/v4
         with:
-          GITHUB_TOKEN: ${{secrets.GITHUB_TOKEN}}
-          BRANCH: gh-pages
-          FOLDER: dest
-          SINGLE_COMMIT: true
-          COMMIT_MESSAGE: .
-          GIT_CONFIG_NAME: Titus Wormer
-          GIT_CONFIG_EMAIL: tituswormer@gmail.com
+          branch: gh-pages
+          commit-message: .
+          folder: dest
+          git-config-email: tituswormer@gmail.com
+          git-config-name: Titus Wormer
+          single-commit: true
+name: main
+on:
+  push:
+    branches:
+      - main
