--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -2,13 +2,13 @@ jobs:
   main:
     runs-on: ubuntu-latest
     steps:
-      - uses: actions/checkout@v3
-      - uses: actions/setup-node@v3
+      - uses: actions/checkout@v4
+      - uses: actions/setup-node@v4
         with:
           node-version: node
       - run: npm install
       - run: npm test
-      - uses: JamesIves/github-pages-deploy-action@releases/v4
+      - uses: JamesIves/github-pages-deploy-action@v4
         with:
           branch: gh-pages
           commit-message: .
