--- a/package.json
+++ b/package.json
@@ -95,8 +95,8 @@
     "@types/node": "^20.0.0",
     "@types/react": "^18.0.0",
     "@types/react-dom": "^18.0.0",
-    "c8": "^8.0.0",
-    "esbuild": "^0.19.0",
+    "c8": "^9.0.0",
+    "esbuild": "^0.20.0",
     "eslint-plugin-react": "^7.0.0",
     "prettier": "^3.0.0",
     "react": "^18.0.0",
@@ -108,7 +108,7 @@
     "remark-toc": "^9.0.0",
     "type-coverage": "^2.0.0",
     "typescript": "^5.0.0",
-    "xo": "^0.56.0"
+    "xo": "^0.58.0"
   },
   "scripts": {
     "build": "tsc --build --clean && tsc --build && type-coverage",
@@ -169,7 +169,8 @@
     "prettier": true,
     "rules": {
       "complexity": "off",
-      "n/file-extension-in-import": "off"
+      "n/file-extension-in-import": "off",
+      "unicorn/prevent-abbreviations": "off"
     }
   }
 }
