--- a/package.json
+++ b/package.json
@@ -95,19 +95,18 @@
     "@types/node": "^20.0.0",
     "@types/react": "^18.0.0",
     "@types/react-dom": "^18.0.0",
-    "c8": "^9.0.0",
-    "esbuild": "^0.20.0",
+    "c8": "^10.0.0",
+    "esbuild": "^0.21.0",
     "eslint-plugin-react": "^7.0.0",
     "prettier": "^3.0.0",
     "react": "^18.0.0",
     "react-dom": "^18.0.0",
     "rehype-raw": "^7.0.0",
-    "remark-cli": "^11.0.0",
-    "remark-gfm": "^4.0.0",
-    "remark-preset-wooorm": "^9.0.0",
+    "remark-cli": "^12.0.0",
+    "remark-preset-wooorm": "^10.0.0",
     "remark-toc": "^9.0.0",
     "type-coverage": "^2.0.0",
-    "typescript": "^5.0.0",
+    "typescript": "^5.5.1-rc",
     "xo": "^0.58.0"
   },
   "scripts": {
@@ -129,16 +128,6 @@
   "remarkConfig": {
     "plugins": [
       "remark-preset-wooorm",
-      [
-        "./node_modules/remark-preset-wooorm/node_modules/remark-gfm/index.js",
-        {
-          "tablePipeAlign": false
-        }
-      ],
-      [
-        "remark-lint-table-pipe-alignment",
-        false
-      ],
       [
         "remark-lint-no-html",
         false
