Support Automatic Link Detection and Hyperlinking
fixes #844

--- a/package.json
+++ b/package.json
@@ -81,6 +81,7 @@
     "hast-util-to-jsx-runtime": "^2.0.0",
     "html-url-attributes": "^3.0.0",
     "mdast-util-to-hast": "^13.0.0",
+    "react-markdown-autolink": "^0.0.1",
     "remark-parse": "^11.0.0",
     "remark-rehype": "^11.0.0",
     "unified": "^11.0.0",
