--- a/package.json
+++ b/package.json
@@ -104,6 +104,7 @@
     "react-dom": "^18.0.0",
     "rehype-raw": "^7.0.0",
     "remark-cli": "^12.0.0",
+    "remark-gfm": "^4.0.0",
     "remark-preset-wooorm": "^10.0.0",
     "remark-toc": "^9.0.0",
     "type-coverage": "^2.0.0",
