--- a/package.json
+++ b/package.json
@@ -92,7 +92,7 @@
     "react": ">=18"
   },
   "devDependencies": {
-    "@types/node": "^20.0.0",
+    "@types/node": "^22.0.0",
     "@types/react": "^18.0.0",
     "@types/react-dom": "^18.0.0",
     "c8": "^10.0.0",
@@ -107,8 +107,8 @@
     "remark-preset-wooorm": "^10.0.0",
     "remark-toc": "^9.0.0",
     "type-coverage": "^2.0.0",
-    "typescript": "^5.5.1-rc",
-    "xo": "^0.58.0"
+    "typescript": "^5.0.0",
+    "xo": "^0.59.0"
   },
   "scripts": {
     "build": "tsc --build --clean && tsc --build && type-coverage",
